<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="in.ac.iiitd.psingh.mc16.objectivequiz.QuizActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/PrimeNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>


    <TextView
        android:id="@+id/textViewer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/question"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/FalseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/falseText"
            android:drawableLeft="@drawable/arrow_left"/>
        <Button
            android:id="@+id/TrueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trueText"
            android:drawableRight="@drawable/arrow_right"/>
    </LinearLayout>
    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextText"/>

    <Button
        android:id="@+id/hint_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="hintClicked"
        android:text="@string/hintText"/>

    <Button
        android:id="@+id/cheat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="cheatClicked"
        android:text="@string/cheatText"/>

    <TextView
        android:id="@+id/CheatTaken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="fill_vertical"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/HintTaken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_gravity="fill_vertical"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    </LinearLayout>
